org-manual.org: Clarify that Imenu support is activated in future Org buffers
* doc/org-manual.org (Packages that Org cooperates with): Clarify that
imenu should be loaded before Org mode is loaded in current buffer.

Reported-by: Kuba Orlik <kontakt@kuba-orlik.name>
Link: Emacs bug#61685

--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -20327,6 +20327,10 @@ packages are documented here.
   By default the index is two levels deep---you can modify the
   depth using the option ~org-imenu-depth~.
 
+  Org activates Imenu support only in the buffers opened after loading
+  Imenu library.  To enable Imenu support in an already opened Org
+  buffer, reload Org.
+
 - =speedbar.el= by Eric\nbsp{}M.\nbsp{}Ludlam ::
   #+cindex: @file{speedbar.el}
 
